--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -6,6 +6,14 @@
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+}
+
+#p {
+    margin: auto;
+
 }
 
 .todolist {
