--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -1,22 +1,24 @@
-.form {
-    margin: auto;
-    margin-top: 20px;
-    width: 75%;
-    background-color: white;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+main {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+section {
     display: flex;
     flex-direction: column;
-    align-items: space-evenly;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 5px;
+    width: 75vw;
 }
 
-#p {
-    margin: auto;
-
+section * {
+    margin-bottom: 5px;
 }
 
-.todolist {
+.todolist  {
     padding: 10px;
     margin: auto;
 }
@@ -25,7 +27,9 @@ input {
     width: 100%;
     height: 25px;
     font-size: 20px;
-    color: #bbb;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .deleteButton {
@@ -51,7 +55,15 @@ input {
     padding: 5px;
 }
 
-.strike{
+.completed{
     text-decoration: line-through;
 }
 
+/* .item-container {
+    display: flex;
+    align-items: center;
+ }
+ 
+ .completed {
+     text-decoration: line-through;
+ }*/
